--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,39 @@
-group "com.amannmalik"
-version "1.0-SNAPSHOT"
-
-wrapper {
-    gradleVersion = "4.8.1"
+plugins {
+    id 'java'
 }
 
-apply plugin: "java"
+group 'systems.cauldron'
+version '1.0-SNAPSHOT'
 
-sourceCompatibility = 1.8
+sourceCompatibility = 11
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testCompile "junit:junit:4.12"
+
+    // logging
+    implementation('org.apache.logging.log4j:log4j-api:2+')
+    implementation('org.apache.logging.log4j:log4j-core:2+')
+
+    // unit testing
+    testImplementation('org.junit.jupiter:junit-jupiter-api:5+')
+    testImplementation('org.junit.jupiter:junit-jupiter-params:5+')
+    testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5+')
+
+    // developer ergonomics
+    compileOnly('org.projectlombok:lombok:1+')
+    annotationProcessor('org.projectlombok:lombok:1+')
+    testCompileOnly('org.projectlombok:lombok:1+')
+    testAnnotationProcessor('org.projectlombok:lombok:1+')
+
 }
 
+java {
+    modularity.inferModulePath = true
+}
+
+test {
+    useJUnitPlatform()
+}
